--- a/xsim2/assembler/CMakeLists.txt
+++ b/xsim2/assembler/CMakeLists.txt
@@ -6,4 +6,4 @@ set(CMAKE_C_STANDARD 99)
 add_library(xlib INTERFACE)
 target_include_directories(xlib INTERFACE .)
 
-add_executable(xasm xas.c xreloc.c)
+add_executable(xas xas.c xreloc.c)
