being work on the JIT compiler

--- a/xsim2/CMakeLists.txt
+++ b/xsim2/CMakeLists.txt
@@ -8,3 +8,5 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 
 add_subdirectory(xsim)
 add_subdirectory(assembler)
+add_subdirectory(jit)
+add_subdirectory(jit_test)
