JIT pretty much finished, still needs jump and call register

--- a/xsim2/CMakeLists.txt
+++ b/xsim2/CMakeLists.txt
@@ -10,3 +10,4 @@ add_subdirectory(xsim)
 add_subdirectory(assembler)
 add_subdirectory(jit)
 add_subdirectory(jit_test)
+add_subdirectory(linkedlist)
