--- a/xsim2/jit/CMakeLists.txt
+++ b/xsim2/jit/CMakeLists.txt
@@ -3,7 +3,7 @@ project(XJIT C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_library(xjit jit.c x64_codegen.c jit_runtime.c)
+add_library(xjit jit.c x64_codegen.c jit_runtime.c linker.c)
 
-target_link_libraries(xjit xlib)
+target_link_libraries(xjit xlib liblinkedlist)
 target_include_directories(xjit PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
